# gadsense_obstacle_detector

./: requirements.txt  scrapy.cfg  setup.cfg
gadsense_obstacle_detector/: items.py  pipelines.py  settings.py
gadsense_obstacle_detector/spiders/: extractor.py
