[metadata]
name = gadsense_obstacle_detector
version = 0.0.1
description = Google Adsense obstacle detecting script
summary = Google Adsense obstacle detecting script
author = momijiame
author_email = amedama.ginmokusei@gmail.com
url = https://github.com/momijiame/gadsense_obstacle_detector
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: Japanese
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

